--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,3 +56,30 @@
   pdf = {https://arxiv.org/pdf/2003.13471.pdf},
   selected = {true}
 }
+
+@article{questionnaire,
+    title={Model Questionnaire},
+    author={FG-AI4H},
+    journal={Reference document J-038 on FG-AI4H server},
+    url={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/SitePages/Home.aspx},
+    year={2020},
+    selected = {true}
+}
+
+@article{daisamref,
+    title={Data and Artificial Intelligence Assessment Methods (DAISAM) Reference},
+    author={FG-AI4H},
+    journal={Reference document DEL 7.3 on FG-AI4H server},
+    url={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/SitePages/Home.aspx},
+    year={2020},
+    selected = {true}
+}
+
+@article{reportingcards,
+    title={DAISAM Audit Reporting Template},
+    author={FG-AI4H},
+    journal={Reference document J-048 on FG-AI4H server},
+    url={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/SitePages/Home.aspx},
+    year={2020},
+    selected = {true}
+}
