--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -83,3 +83,12 @@
     year={2020},
     selected = {true}
 }
+
+@article{reportingcards,
+    title={White Paper on Artificial Intelligence: a European approach to excellence and trust},
+    author={European Commission},
+    journal={Whitepaper, Brussels, 19.2.2020 COM(2020) 65 final},
+    url={https://ec.europa.eu/info/sites/info/files/commission-white-paper-artificial-intelligence-feb2020_en.pdf},
+    year={19 February 2020},
+    selected = {true}
+}
