--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -96,7 +96,7 @@
 @article{reportingcards,
     title={Assessment List for Trustworthy Artificial Intelligence (ALTAI) for self-assessment},
     author={European Commission-High-Level Expert Group on Artificial Intelligence},
-    journal={Whitepaper, Brussels, 19.2.2020 COM(2020) 65 final},
+    journal={European Commission Document, B-1049 Brussels},
     url={PDF: ISBN 978-92-76-20008-6 doi:10.2759/002360 KK-02-20-479-EN-N},
     year={17 July 2020},
     selected = {true}
