--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -101,3 +101,12 @@
     year={17 July 2020},
     selected = {true}
 }
+
+@article{reportingcards,
+    title={Good practices for health applications of machine learning: Considerations for manufacturers and regulators},
+    author={AI4H-FG},
+    journal={Reference Document DEL 2.2 on FG-AI4H server 2020,
+    url={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/_layouts/15/WopiFrame.aspx?sourcedoc=%7B828882B2-4941-452C-8A61-F4DDE5802C2A%7D&file=FGAI4H-K-039.docx&action=default&CT=1613737029587&OR=DocLibClassicUI},
+    year={27 January 2021},
+    selected = {true}
+}
