--- a/_bibliography/assessmentplatform.bib
+++ b/_bibliography/assessmentplatform.bib
@@ -11,6 +11,7 @@
       abbr={ITU/WHO},
       html={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/_layouts/15/WopiFrame.aspx?sourcedoc=%7BD810F149-A5D1-4380-B128-5AC4F8AC07EC%7D&file=FGAI4H-K-043-A01.pptx&action=default&CT=1614792781425&OR=DocLibClassicUI},
       pdf={standards/FGAI4H-K-043-A01.pdf},
+      projectoutput = {true},
       abstract={Presentation of the software components developed by WG-DAISAM for automating the FG-AI4H evaluation process.},
       code={https://github.com/aiaudit-org/fgai4h-evaluation-platform}
     }
