--- a/_bibliography/transparentmodelreporting.bib
+++ b/_bibliography/transparentmodelreporting.bib
@@ -11,5 +11,6 @@
       abbr={ITU/WHO},
       html={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/_layouts/15/WopiFrame.aspx?sourcedoc=%7B3DAE32A1-24FF-4F4D-A735-F378056BA6CF%7D&file=FGAI4H-J-048.docx&action=default&CT=1614791061573&OR=DocLibClassicUI},
       pdf={standards/FGAI4H-J-048.pdf},
+      projectoutput = {true},
       abstract={Standardized templates to report results for the assessment processes developed by WG-DAISAM. In this version the, template comprises three elements: Data Specification Sheet, ML Model Specification Sheet and ML Model Summary Findings.},
     }
