--- a/_bibliography/transparentmodelreporting.bib
+++ b/_bibliography/transparentmodelreporting.bib
@@ -1,5 +1,5 @@
 %training and test data specification
-@InProceedings{transparentmodelreporting,
+@InProceedings{AuditReportTemplate,
       title       = {Data and artificial intelligence assessment methods (DAISAM) Audit Reporting Template},
       author      = {Boris Verks and Luis Oala},
       institution = {International Telecommunications Union},
