--- a/_bibliography/ml4hpcm.bib
+++ b/_bibliography/ml4hpcm.bib
@@ -8,7 +8,7 @@
       abbr={ITU/WHO},
       html={https://extranet.itu.int/sites/itu-t/focusgroups/ai4h/_layouts/15/WopiFrame.aspx?sourcedoc=%7B828882B2-4941-452C-8A61-F4DDE5802C2A%7D&file=FGAI4H-K-039.docx&action=default&CT=1614782367878&OR=DocLibClassicUI},
       pdf={standards/FGAI4H-K-039.pdf},
-      projectoutput = {true},
+      projectoutput = {false},
       abstract={This document contains the latest draft of the FG-AI4H deliverable DEL02.2 "Good practices for health applications of machine learning: Considerations for manufacturers and regulators". This deliverable defines a set of guidelines intended to serve the AI solution developers/manufacturers on how to do conduct a comprehensive requirements analysis and to streamline the conformity assessment procedures to ensure regulatory compliance for the AI based Medical Devices (AI/ML-MD).},
       selected = {true},
     }
